fix: displaying only slice of users cars instead of overflowing them

--- a/src/components/user/details/cars/cars.sass
+++ b/src/components/user/details/cars/cars.sass
@@ -1,7 +1,29 @@
 @import "src/assets/variables"
 
 .details-cars
-    padding: 8px 0
+    margin: 4px 0
+    padding: 0 6px 0 0
+    max-height: 60vh
+    overflow: scroll
+    overflow-x: hidden
+    @media only screen and (max-width: $max-large) and (orientation: landscape)
+        max-height: 40vh
+    @media only screen and (max-width: $max-medium)
+        max-height: 65vh
+    @media only screen and (max-width: 400px)
+        max-height: 55vh
+
+.details-cars::-webkit-scrollbar
+    width: 4px
+
+.details-cars::-webkit-scrollbar-track
+    background: #fff
+    border-radius: 12px
+
+.details-cars::-webkit-scrollbar-thumb
+    transition: all 0.3s ease 0s
+    background: rgba(34,34,34, 1)
+    border-radius: 24px
 
 .details-cars-hidden
     display: none
